blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: client
  template: # how pods should be created by deployment
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: {Docker Id}/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP # default, no need to write
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
