blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: comments
  template: # how pods should be created by deployment
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: {Docker Id}/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  type: ClusterIP # default, no need to write
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
