blog/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: event-bus
  template: # how pods should be created by deployment
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: {Docker Id}/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP # default, no need to write
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
