blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: moderation
  template: # how pods should be created by deployment
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: {Docker Id}/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP # default, no need to write
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
