blog/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: posts
  template: # how pods should be created by deployment
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: {Docker Id}/posts # or .../posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  type: ClusterIP # default, no need to write
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
