blog/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: query
  template: # how pods should be created by deployment
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: {Docker Id}/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP # default, no need to write
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
